<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/officers"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/farid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Farid"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Shonkar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/farid"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Shonkar"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Humayun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Shonkar"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Humayun"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Raqibul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Humayun"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/Raqibul"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Tariqul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Raqibul"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Tariqul"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Tariqul"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Baral"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>


</ScrollView>